--- a/achievers/style.css
+++ b/achievers/style.css
@@ -153,6 +153,68 @@ form button:hover {
     color: #333;
 }
 
+.compare-table {
+    width: 90%;
+    max-width: 1000px;
+    margin: 20px auto;
+    border-collapse: collapse;
+}
+.compare-table table {
+    width: 100%;
+    border-collapse: collapse;
+    
+   
+}
+.compare-table th img {
+    width: 100%; 
+    height: 50%; 
+    object-fit: cover; 
+    display: block;   
+}
+.compare-table th,
+.compare-table td {
+     border: 1px solid #ddd; ; 
+    padding: 10px;
+    text-align: center;
+}
+
+.compare-table th {
+    background-color: white;
+}
+
+.color-circle {
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    margin-right: 5px;
+}
+
+.color-circle.red {
+    background-color: orange;
+}
+
+.color-circle.yellow {
+    background-color: red;
+}
+
+.color-circle.green {
+    background-color: yellow;
+}
+
+.add-to-cart {
+    background-color: rgb(37, 152, 152);
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.add-to-cart:hover {
+    background-color: #218838;
+}
+
 
 .newsletter {
     background-color: #e8f8f5;
